@@ -1,8 +1,14 @@
+2008-03-03  Heiko Stamer <stamer@gaos.org>
+	* tpm_deprecated.c, tpm_marshalling.c: TPM_ChangeAuthAsymFinish() added
+
+
 2008-02-21  Heiko Stamer <stamer@gaos.org>
 	* tpm_deprecated.c, tpm_storage.c: TPM_ChangeAuthAsymStart() added
 
+
 2008-02-12  Mario Strasser <mast@gmx.net>
 	* ChangeLog: changes updated for release 0.5.1
+
 
 2008-01-07  Mario Strasser <mast@gmx.net>
 	* tpmd_dev_openbsd/*: OpenBSD module added
